# HandwritingDetector

./: CMakeLists.txt  README.md
res/: basic-comp.spv  basic-frag.spv  basic.comp  basic.frag  frag.spv
src/: CMakeLists.txt  display.c  display.h  main.c
